// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleColumn 2カラムモード 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "marginLeft": 10,
      "marginRight": 10,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://placehold.jp/150x150.png",
        }
      }
      style={
        Object {
          "flex": 4,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 3,
          },
          Object {
            "marginTop": 10,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#000000",
            "fontSize": 12.5,
            "fontWeight": "bold",
          }
        }
      >
        あああああああああああああああああああああああああああ
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 10,
            "marginTop": 5,
          }
        }
      >
        20XX年Y月Z日
      </Text>
    </View>
  </View>
</View>
`;

exports[`ArticleColumn 3カラムモード 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "marginLeft": 10,
      "marginRight": 10,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://placehold.jp/150x150.png",
        }
      }
      style={
        Object {
          "flex": 8,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 9,
          },
          Object {
            "marginTop": 10,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#000000",
            "fontSize": 12.5,
            "fontWeight": "bold",
          }
        }
      >
        あああああああああああああああああああああああああああ
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 10,
            "marginTop": 5,
          }
        }
      >
        20XX年Y月Z日
      </Text>
    </View>
  </View>
</View>
`;

exports[`ArticleColumn 3カラムモードでタイトルが長い場合 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "marginLeft": 10,
      "marginRight": 10,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://placehold.jp/150x150.png",
        }
      }
      style={
        Object {
          "flex": 8,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 9,
          },
          Object {
            "marginTop": 10,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#000000",
            "fontSize": 12.5,
            "fontWeight": "bold",
          }
        }
      >
        ああああああああああああああああああああああああああああああああああああああ...
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 10,
            "marginTop": 5,
          }
        }
      >
        20XX年Y月Z日
      </Text>
    </View>
  </View>
</View>
`;

exports[`ArticleColumn カラムモード未指定時エラー処理 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "marginLeft": 10,
      "marginRight": 10,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://placehold.jp/150x150.png",
        }
      }
      style={
        Object {
          "flex": 4,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 3,
          },
          Object {
            "marginTop": 10,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#000000",
            "fontSize": 12.5,
            "fontWeight": "bold",
          }
        }
      >
        あああああああああああああああああああああああああああ
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 10,
            "marginTop": 5,
          }
        }
      >
        20XX年Y月Z日
      </Text>
    </View>
  </View>
</View>
`;
